# RayTracerCpp

./: .gitignore  CMakeLists.txt  README.md  RayTracerC++.cpp  RayTracerC++.sln  RayTracerC++.vcxproj  RayTracerC++.vcxproj.filters
RayTracerC++/x64/Debug/: RayTracerC++.exe.recipe  RayTracerC++.ilk  vc143.idb
RayTracerC++/x64/Debug/RayTracerC++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RayTracerC++.lastbuildstate  RayTracerC++.write.1u.tlog  VcpkgInstallManifestx64-windows.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RayTracerC++/x64/Release/: RayTracerC++.exe.recipe  RayTracerC++.iobj  RayTracerC++.ipdb
RayTracerC++/x64/Release/RayTracerC++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RayTracerC++.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
